# psu-capstone

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  condaenv.bch877te.requirements.txt  htmrlenv.yaml  htmrlenv.yml  pyproject.toml  pytest.txt  pytestLog.txt  setup.py  sonar-project.properties
.github/: labeler.yaml  pull_request_template.md
.github/actions/: python-detect-package-manager.yaml  python-lint.yaml
.github/actions/python-detect-package-manager/: action.yaml
.github/actions/python-fmt/: action.yaml
.github/actions/python-lint/: action.yaml
.github/actions/python-tests/: action.yaml  parse-reports.sh
.github/instructions/: sonarqube_mcp.instructions.md
.github/workflows/: ci.yaml  labeler-pr.yaml
Project/: run_maintenance.py
Project/docs/: index.html  search.js
Project/numenta/: agent.py  frozen_lake.py  htm.py  utils.py
Project/src/: __init__.py
Project/src/main/: App.py
SDR_Encoder_Temp/: BaseEncoder.py  DateEncoder.py  RandomDistributedScalarEncoder.py  SDR.py  ScalarEncoder.py  Sdr_old_probably_drop.py  date_encoder.py
archive/Cartpole/: cartPole.py  dataSource.py  environment-tensorflow.yml
archive/Project/docs/: Project.html  search.js  (+1 more)
archive/numenta/: agent.py  environment_base.py  frozen_lake.py
data/: easyData.xlsx
docs/: InputData.html
numenta/: agent.py  frozen_lake.py  htm.py  utils.py
scripts/: run-shellcheck.sh
src/: demo_driver.py
src/psu_capstone/: __init__.py  utils.py  visual_test.py
test/: example_test.py  test_encoder_scalar.py  test_input_handler_load_data.py  test_sdr_encoder_base.py  test_sdr_encoder_scalar.py  test_sdr_suite.py
tests/: test_base_encoder.py  test_dummy.py  test_encoder_category.py  test_encoder_date.py  test_encoder_handler_suite.py  test_encoder_rdse.py  test_encoder_scalar.py  test_encoder_to_htm.py  test_example.py  test_input_handler_load_data.py  test_input_to_encoder.py  test_sdr_suite.py  test_sdr_visual.py
(+90 files in other folders)
